Enhance UI and data handling for ingredient editing
Significantly updated `EditIngredientsPageView.xaml` and `EditRecipeIngredientsPageView.xaml` to replace simple layouts with complex UI structures, including `ScrollView`, `Grid`, `Label`, `Button`, `TextField`, and `DataGrid` elements.

Updated `EditIngredientsPageViewModel.cs` and `EditRecipeIngredientsPageViewModel.cs` to manage collections of `Ingredient` and `RecipeIngredient` objects, respectively, with Firestore database integration.

Added `RecipeIngredientDetailDto.cs` to define a DTO class for detailed recipe ingredient information.

--- a/View/AdminView/EditRecipeIngredientsPageView.xaml
+++ b/View/AdminView/EditRecipeIngredientsPageView.xaml
@@ -3,17 +3,125 @@
     x:Class="MAUIRecipeApp.View.AdminView.EditRecipeIngredientsPageView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:dto="clr-namespace:MAUIRecipeApp.DTO"
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.AdminViewModel"
-    Title=""
+    x:Name="PageRef"
+    Title="Edit Recipe Ingredient"
     x:DataType="viewmodel:EditRecipeIngredientsPageViewModel"
     Background="{StaticResource WhiteText}">
-    <VerticalStackLayout>
-        <Label
-            HorizontalOptions="Center"
-            Text="Welcome to .NET Recipe Ingredients!"
-            VerticalOptions="Center" />
-    </VerticalStackLayout>
+    <ScrollView>
+        <VerticalStackLayout Spacing="8">
+            <Grid Margin="16,8,16,0" VerticalOptions="Start">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <HorizontalStackLayout Grid.Column="0" Spacing="8">
+                    <Label
+                        Grid.ColumnSpan="2"
+                        FontAttributes="Bold"
+                        FontSize="24"
+                        HorizontalOptions="Center"
+                        Text="{Binding Source={x:Reference PageRef}, Path=Title}"
+                        TextColor="{StaticResource Primary}"
+                        VerticalOptions="Center" />
+
+                </HorizontalStackLayout>
+                <HorizontalStackLayout
+                    Grid.Column="1"
+                    HorizontalOptions="End"
+                    Spacing="8"
+                    VerticalOptions="Center">
+                    <Button
+                        Background="Aqua"
+                        FontAttributes="Bold"
+                        TextColor="{StaticResource WhiteText}"
+                        ToolTipProperties.Text="Edit">
+                        <Button.ImageSource>
+                            <FontImageSource
+                                FontFamily="MaterialSharp"
+                                Glyph="{x:Static m:MaterialSharp.Edit}"
+                                Size="20" />
+                        </Button.ImageSource>
+                    </Button>
+                    <Button
+                        Background="Lime"
+                        FontAttributes="Bold"
+                        TextColor="{StaticResource WhiteText}"
+                        ToolTipProperties.Text="Save">
+                        <Button.ImageSource>
+                            <FontImageSource
+                                FontFamily="MaterialSharp"
+                                Glyph="{x:Static m:MaterialSharp.Save}"
+                                Size="20" />
+                        </Button.ImageSource>
+                    </Button>
+                </HorizontalStackLayout>
+                <material:TextField
+                    Title="Search..."
+                    Grid.Row="1"
+                    AllowClear="True"
+                    TextColor="{StaticResource Primary}">
+                    <material:TextField.Icon>
+                        <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Search}" />
+                    </material:TextField.Icon>
+                </material:TextField>
+            </Grid>
+
+
+            <material:DataGrid Margin="16,0,16,0" ItemsSource="{Binding RecipeIngredientDetailDtos}">
+
+
+                <material:DataGrid.Columns>
+
+                    <material:DataGridColumn
+                        Title="Recipe Name"
+                        Width="*"
+                        ValueBinding="{Binding RecipeName}" />
+
+
+                    <material:DataGridColumn
+                        Title="Ingredient Name"
+                        Width="*"
+                        ValueBinding="{Binding IngredientName}" />
+
+                    <material:DataGridColumn
+                        Title="Quantity"
+                        Width="*"
+                        ValueBinding="{Binding Quantity}" />
+
+                    <material:DataGridColumn Title="Actions" Width="*">
+                        <material:DataGridColumn.CellItemTemplate>
+                            <DataTemplate>
+                                <Button
+                                    Background="PaleVioletRed"
+                                    HorizontalOptions="Center"
+                                    Text="Remove" />
+                            </DataTemplate>
+                        </material:DataGridColumn.CellItemTemplate>
+                    </material:DataGridColumn>
+                    <material:DataGridColumn Title="Is Deleted ?" Width="*">
+                        <material:DataGridColumn.CellItemTemplate>
+                            <DataTemplate x:DataType="dto:RecipeIngredientDetailDto">
+                                <material:CheckBox HorizontalOptions="Center" IsChecked="{Binding IsDeleted}" />
+                            </DataTemplate>
+                        </material:DataGridColumn.CellItemTemplate>
+                    </material:DataGridColumn>
+
+                </material:DataGrid.Columns>
+            </material:DataGrid>
+
+
+
+
+        </VerticalStackLayout>
+    </ScrollView>
+
 </ContentPage>
